--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "@types/react-dom": "^17.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.2.4",
     "typescript-eslint-parser": "^22.0.0",
     "web-vitals": "^1.1.1"
